Fixed home page overflow.

--- a/content/themes/friocal/assets/css/main.css
+++ b/content/themes/friocal/assets/css/main.css
@@ -178,6 +178,7 @@ body {
 
 .flexslider {
   height: 100%;
+  overflow-x: hidden;
   width: 100%; }
   .flexslider img {
     display: none;
