--- a/content/themes/friocal/assets/sass/partials/base/_flexslider.scss
+++ b/content/themes/friocal/assets/sass/partials/base/_flexslider.scss
@@ -6,6 +6,7 @@
 // -----------------------------------------------------------------------------
 .flexslider {
   height: 100%;
+  overflow-x: hidden;
   width: 100%;
 
   img {
